# lipoma

./: .gitignore  Makefile  README.md  apple.offxml  apple.py  apply.py  board.py  cluster.py  covdiff.py  env.yaml  esp_ba.offxml  esp_v_msm.py  filter_bench.py  from_besmarts.py  issues.org  kill.sh  learn.py  main.py  manual.org  msm.py  out.json  parse_query.py  partition.py  patches.py  query.py  record.py  sage.offxml  try_chemper.py  twod.py  utils.py  wrapper.py
datasets/: filtered-opt.json
forcefields/: esp_ba.offxml  espaloma-all.offxml  full.offxml  out.offxml
output/esp-tors-10/: t129.records  t140.records
proxy/: Cargo.toml  index.html
proxy/src/: main.rs  utils.rs
refit/: Makefile  msm.offxml  opt-smirks.json  opt.json  td-smirks.json  td.json
refit/fb-fit/forcefield/: force-field.offxml
refits/besmarts_ba/: deparam.py  td-smirks.json
refits/besmarts_ba/fb-fit/: optimize.in
refits/besmarts_ba/output/schemas/optimizations/: fb-fit.json
refits/dashboard/: Makefile  README.org  msm.offxml  opt-smirks.json  split.offxml  td-smirks.json
refits/dashboard/fb-fit/: optimize.in
refits/dashboard/fb-fit/forcefield/: force-field.offxml
refits/esp-all/: Makefile  fix.awk  input.offxml  msm.offxml  opt-smirks.json  opt.json  readme  td-smirks.json  td.json
refits/esp-all/fb-fit/forcefield/: force-field.offxml
refits/esp-full/: Makefile  full.offxml  opt-smirks.json  td-smirks.json  td.json
refits/esp-full/fb-fit/forcefield/: force-field.offxml
tests/msm/: Makefile  msm.offxml
tests/msm-split/: msm.offxml
(+3 files in other folders)
